# moment-music

./: .gitignore  CLAUDE.md  README.md  dev.sh  run-backend.sh  run-frontend.sh  setup.sh
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/prompts/: listen_analysis_system.md  listen_music_base.md  listen_music_system.md  listen_narration_base.md  listen_narration_system.md  listen_song_base.md  listen_song_system.md  move_music_base.md  move_music_system.md  move_narration_base.md  move_narration_system.md  move_song_base.md  move_song_system.md  weather_music_base.txt  weather_music_system.md  weather_narration_base.md  weather_narration_base.txt  weather_narration_system.md  weather_narration_system.txt  weather_song_base.md  weather_song_base.txt  weather_song_system.txt  write_caption_system.md  write_music_base.md  write_music_system.md  write_narration_base.md  write_narration_system.md  write_song_base.md  write_song_system.md
backend/app/routers/: generate.py  listen.py  move.py  write.py
backend/app/services/: audio_analysis.py  audio_generation.py  geocoding.py  image_generation.py  jobs.py  motion_analysis.py  prompt_generation.py  vision.py  weather.py
backend/app/services/engines/: __init__.py  ace_step.py  base.py  heart_mula.py  qwen3_tts.py  stable_audio_api.py  stable_audio_open.py
backend/app/utils/: audio_mixing.py  helpers.py
backend/scripts/: download_models.py  setup.sh
docs/: ai-pipeline.md  architecture.md  async-pipeline.md  creation-modes.md  design-guide.md  overview.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAudioCapture.ts  useAudioPlayer.ts  useDeviceMotion.ts
frontend/src/lib/: api.ts  constants.ts  engine.ts  jobs.ts  library.ts  stylePrompts.ts  types.ts  utils.ts
frontend/src/pages/: BeMode.tsx  Entryway.tsx  Library.tsx  ListenMode.tsx  MomentPlayer.tsx  MoveMode.tsx  Profile.tsx  Prompts.tsx  Setup.tsx  WriteMode.tsx
(+21 files in other folders)
